--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Anton&family=Edu+TAS+Beginner:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sometype+Mono:ital,wght@0,400..700;1,400..700&display=swap"
     rel="stylesheet">
+  <!-- link fonteawesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+
   <!-- titolo progetto -->
   <title>React Dc Project</title>
 </head>
